# multithread-message-queue

./: CMakeLists.txt  readme.MD
data/: results.json
data/dumps/: test_1.txt  test_151.txt  test_3.txt  test_4.txt  test_6.txt  test_8.txt
include/: basemmq.hpp  lock_free_queue.hpp  message.hpp  mmq.hpp  mmq2.hpp  naive.hpp
scripts/: analyze.py
src/: main.cpp  mmq.cpp  mmq2.cpp  naive.cpp
